--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -9,21 +9,21 @@ jobs:
   build-deploy:
     runs-on: macOS 10.15.6
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@master
       # with:
       #   submodules: true
 
     - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
+      uses: peaceiris/actions-hugo@v2.2.0
       with:
         hugo-version: '0.70.0'
         extended: true
 
     - name: Build
-      run: hugo --minify
+      run: hugo --minify --cleanDestinationDir
 
     - name: Deploy
-      uses: peaceiris/actions-gh-pages@v2
+      uses: w9jds/firebase-action@master
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         EXTERNAL_REPOSITORY: XushengLuo/XushengLuo.github.io
