--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: hugo publish
+name: GitHub Pages
 
 on:
   push:
@@ -7,28 +7,24 @@ on:
 
 jobs:
   build-deploy:
-    runs-on: macOS 10.15.6
+    runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@master
-      # with:
-      #   submodules: true
+    - uses: actions/checkout@v1
+      with:
+        submodules: true
 
     - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2.2.0
+      uses: peaceiris/actions-hugo@v2
       with:
         hugo-version: '0.70.0'
-        extended: true
+        extend: true
 
     - name: Build
-      run: hugo --minify --cleanDestinationDir
+      run: hugo
 
     - name: Deploy
-      uses: w9jds/firebase-action@master
+      uses: peaceiris/actions-gh-pages@v2
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        EXTERNAL_REPOSITORY: XushengLuo/XushengLuo.github.io
-        PUBLISH_BRANCH: master
+        PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: ./public
-      with:
-        emptyCommits: false
-        commitMessage: ${{ github.event.head_commit.message }}
