--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,12 +9,20 @@
   weight = 10
 
 
+#[[main]]
+#  name = "Publications"
+#  url = "#publications"
+#  weight = 40
+
 [[main]]
   name = "Publications"
-  url = "#publications"
+  url = "publication/"
   weight = 40
-
-
+  
+[[main]]
+  name = "Research"
+  url = "research/"
+  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/cv.pdf` and uncomment the lines below.
